kustomize/test-node/kubevirtbmc/vbmc.yaml
# Originally attempted to use the Helm Kustomize invocation:
#
#HelmCharts:
#- name: kubevirtbmc
#  includeCRDs: true
#  valuesInline: {}
#  releaseName: bmc
#  version: v0.2.4
#  repo: https://charts.zespre.com/
#
# However, that broke:
# Error: map[string]interface {}(nil): yaml: unmarshal errors:
#   line 13: mapping key "labels" already defined at line 5
# so this contains "helm template" output with some changes.
---
# Source: kubevirtbmc/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: kubevirtbmc-0.2.4
    app.kubernetes.io/name: kubevirtbmc
    app.kubernetes.io/instance: kubevirtbmc
    app.kubernetes.io/version: "v0.5.3"
    app.kubernetes.io/component: kube-rbac-proxy
    app.kubernetes.io/part-of: kubevirtbmc
  name: kubevirtbmc-metrics-service
  namespace: kubevirtbmc-system
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: metrics-server
  selector:
      app.kubernetes.io/name: kubevirtbmc
      app.kubernetes.io/instance: kubevirtbmc
---
# Source: kubevirtbmc/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: kubevirtbmc-0.2.4
    app.kubernetes.io/name: kubevirtbmc
    app.kubernetes.io/instance: kubevirtbmc
    app.kubernetes.io/version: "v0.5.3"
    app.kubernetes.io/component: webhook
    app.kubernetes.io/part-of: kubevirtbmc
  name: kubevirtbmc-webhook-service
  namespace: kubevirtbmc-system
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: webhook-server
  selector:
      app.kubernetes.io/name: kubevirtbmc
      app.kubernetes.io/instance: kubevirtbmc
---
# Source: kubevirtbmc/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubevirtbmc
  labels:
    helm.sh/chart: kubevirtbmc-0.2.4
    app.kubernetes.io/name: kubevirtbmc
    app.kubernetes.io/instance: kubevirtbmc
    app.kubernetes.io/version: "v0.5.3"
    app.kubernetes.io/component: manager
    app.kubernetes.io/part-of: kubevirtbmc
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubevirtbmc
      app.kubernetes.io/instance: kubevirtbmc
  template:
    metadata:
      labels:
        helm.sh/chart: kubevirtbmc-0.2.4
        app.kubernetes.io/name: kubevirtbmc
        app.kubernetes.io/instance: kubevirtbmc
        app.kubernetes.io/version: "v0.5.3"
        app.kubernetes.io/component: manager
        app.kubernetes.io/part-of: kubevirtbmc
    spec:
      serviceAccountName: kubevirtbmc-manager
      securityContext:
        runAsNonRoot: true
      containers:
      - name: manager
        securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
        image: "ghcr.io/rainest/kubevirtbmc:v0.6.0-beta.5"
        imagePullPolicy: IfNotPresent
        command:
        - /manager
        args:
        - "--health-probe-bind-address=:8081"
        - "--metrics-bind-address=127.0.0.1:8080"
        - "--agent-image-name=traines/virtbmc"
        - "--agent-image-tag=v0.5.3-ainfo.3"
        - "--leader-elect"
        ports:
        - name: metrics-server
          containerPort: 8080
          protocol: TCP
        - name: webhook-server
          containerPort: 9443
          protocol: TCP
        livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
        readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
        resources:
            {}
        volumeMounts:
        - name: cert
          mountPath: "/tmp/k8s-webhook-server/serving-certs"
          readOnly: true
      - name: kube-rbac-proxy
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        image: "gcr.io/kubebuilder/kube-rbac-proxy:v0.15.0"
        imagePullPolicy: IfNotPresent
        args:
        - "--secure-listen-address=0.0.0.0:8443"
        - "--upstream=http://127.0.0.1:8080/"
        - "--logtostderr=true"
        - "--v=0"
        ports:
        - containerPort: 8443
          protocol: TCP
          name: https
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 5m
            memory: 64Mi
      volumes:
      - name: cert
        secret:
          secretName: kubevirtbmc-webhook-server-cert
          defaultMode: 420
---
# Source: kubevirtbmc/templates/webhoookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    helm.sh/chart: kubevirtbmc-0.2.4
    app.kubernetes.io/name: kubevirtbmc
    app.kubernetes.io/instance: kubevirtbmc
    app.kubernetes.io/version: "v0.5.3"
    app.kubernetes.io/component: webhook
    app.kubernetes.io/part-of: kubevirtbmc
  annotations:
    cert-manager.io/inject-ca-from: kubevirtbmc-system/kubevirtbmc-serving-cert
  name: kubevirtbmc-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: kubevirtbmc-webhook-service
      namespace: kubevirtbmc-system
      path: /mutate-virtualmachine-kubevirt-io-v1alpha1-virtualmachinebmc
  failurePolicy: Fail
  name: mvirtualmachinebmc.kb.io
  rules:
  - apiGroups:
    - virtualmachine.kubevirt.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - virtualmachinebmcs
  sideEffects: None
---
# Source: kubevirtbmc/templates/webhoookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    helm.sh/chart: kubevirtbmc-0.2.4
    app.kubernetes.io/name: kubevirtbmc
    app.kubernetes.io/instance: kubevirtbmc
    app.kubernetes.io/version: "v0.5.3"
    app.kubernetes.io/component: webhook
    app.kubernetes.io/part-of: kubevirtbmc
  annotations:
    cert-manager.io/inject-ca-from: kubevirtbmc-system/kubevirtbmc-serving-cert
  name: kubevirtbmc-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: kubevirtbmc-webhook-service
      namespace: kubevirtbmc-system
      path: /validate-virtualmachine-kubevirt-io-v1alpha1-virtualmachinebmc
  failurePolicy: Fail
  name: vvirtualmachinebmc.kb.io
  rules:
  - apiGroups:
    - virtualmachine.kubevirt.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - virtualmachinebmcs
  sideEffects: None
